--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "leaflet": "latest"
+    "leaflet": "latest",
+    "angular-chart.js": "~0.5.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
