--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular": "^1.3.0",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
-    "bootstrap": "~3.3.5",
+    "bootstrap": "~3.2.0",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
@@ -13,7 +13,7 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "leaflet": "latest",
-    "angular-chart.js": "~0.5.3"
+    "angular-chart.js": "latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
