--- a/bower.json
+++ b/bower.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
-    "bootstrap": "~3.2.0",
     "angular-animate": "^1.3.0",
+    "angular-chart.js": "latest",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
+    "bootstrap": "~3.2.0",
+    "es5-shim": "^4.0.0",
+    "json3": "^3.3.0",
     "leaflet": "latest",
-    "angular-chart.js": "latest"
+    "spin.js": "~2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
