--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "estatisticas",
   "version": "0.0.0",
   "dependencies": {
+    "Chart.StackedBar.js": "~1.0.3",
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
     "angular-chart.js": "latest",
