--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "es5-shim": "^4.0.0",
     "json3": "^3.3.0",
     "leaflet": "latest",
-    "spin.js": "~2.3.2"
+    "spin.js": "~2.3.2",
+    "numeral": "~1.5.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
