--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "json3": "^3.3.0",
     "leaflet": "latest",
     "spin.js": "~2.3.2",
-    "numeral": "~1.5.3"
+    "numeral": "~1.5.3",
+    "ng-csv": "~0.3.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
