--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "leaflet": "latest",
     "spin.js": "~2.3.2",
     "numeral": "~1.5.3",
-    "ng-csv": "~0.3.6"
+    "ng-csv": "~0.3.6",
+    "c3": "~0.4.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
