--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "spin.js": "~2.3.2",
     "numeral": "~1.5.3",
     "ng-csv": "~0.3.6",
-    "c3": "~0.4.10"
+    "c3": "~0.4.10",
+    "leaflet-switchcontrol": "https://github.com/dagnaldo/Leaflet.switchcontrol.git"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
