--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "numeral": "~1.5.3",
     "ng-csv": "~0.3.6",
     "c3": "~0.4.10",
-    "leaflet-switchcontrol": "https://github.com/dagnaldo/Leaflet.switchcontrol.git"
+    "leaflet-switchcontrol": "https://github.com/dagnaldo/Leaflet.switchcontrol.git",
+    "leaflet.markercluster": "^0.5.0",
+    "bootstrap-datepicker": "^1.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
