--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,11 @@
   "name": "estatisticas",
   "version": "0.0.0",
   "dependencies": {
+    "Chart.js": "chart.js#1.0.0-beta",
     "Chart.StackedBar.js": "~1.0.3",
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
-    "angular-chart.js": "latest",
+    "angular-chart.js": "0.10.x",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
@@ -14,7 +15,7 @@
     "bootstrap": "~3.2.0",
     "es5-shim": "^4.0.0",
     "json3": "^3.3.0",
-    "leaflet": "latest",
+    "leaflet": "^1.0.2",
     "spin.js": "~2.3.2",
     "numeral": "~1.5.3",
     "ng-csv": "~0.3.6",
