--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,10 @@
     "c3": "~0.4.10",
     "leaflet-switchcontrol": "https://github.com/dagnaldo/Leaflet.switchcontrol.git",
     "leaflet.markercluster": "^0.5.0",
-    "bootstrap-datepicker": "^1.6.1"
+    "bootstrap-datepicker": "^1.6.1",
+    "leaflet-plugins": "^3.0.0",
+    "leaflet-multilayer-feature-getter": "https://bitbucket.org/IgorCastilheiro/leaflet.multilayerfeaturegetter.git",
+    "datepicker": "https://github.com/angular-ui/bootstrap/tree/master/src/datepicker"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
